2006-07-10  Daiki Ueno <ueno@unixuser.org>

	* mml2015.el (mml2015-verbose): New variable.
	(mml2015-cache-passphrase): Ditto.
	(mml2015-passphrase-cache-expiry): Ditto.
	(mml2015-function-alist): Add epg.
	(mml2015-epg-passphrase-callback, mml2015-epg-decrypt)
	(mml2015-epg-clear-decrypt, mml2015-epg-verify)
	(mml2015-epg-clear-verify, mml2015-epg-sign, mml2015-epg-encrypt): New
	functions.

2006-07-08  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* message.el (message-cite-original-1): Preserve region when removing
	quoted text due to X-No-Archive in order to avoid bogus attribution
	when citing multiple messages.

2006-06-27  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus-group.el (gnus-group-sort-by-unread): Fix typo.  Reported by
	Kenneth Jacker <khj@be.cs.appstate.edu>.

2006-06-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-diary.el (gnus-user-format-function-d)
	(gnus-user-format-function-D): Autoload.

	* imap.el (Commentary): Fix typo.

	* gnus-util.el (kill-empty-logs, gnus-byte-compile): Remove anonymous
	2006-04-22 contribution.

2006-06-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-valid-select-methods): Revert last change for nnweb.
	It didn't really fix the bogosity I'm seeing with solid web groups.

2006-06-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-valid-select-methods): Declare nnweb with 'address.
	Since revision 6.95 (2003-01-05) of gnus-group.el, solid web groups are
	created using server names.  If we use the feature without declaring
	it, Gnus does not properly manage server and group state.

	* nnweb.el (nnweb-google-search): Respect nnweb-max-hits as upper
	bound.

2006-06-25  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-find-method-for-group): On killed/unknown groups, try
	looking up the method using GROUP's prefix before inventing a new one.
	It is used on killed/unknown groups in various places where returning